# Juggernyaut

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  test.cpp
.cmake/: build-output.cmake  common.cmake  debug-mode.cmake  dependencies.cmake  diagnostics.cmake  messages.cmake  shared.cmake  utility.cmake
.cmake/ANTLR4/: ExternalAntlr4Cpp.cmake
.cmake/compiler/: cpp.cmake
.cmake/components/: cleanup.bat.in  cleanup.sh.in  copy_shared_libs.cmake
.cmake/other/: legal.cmake
.github/workflows/: _binaries_dynamic_build.yml  _binaries_linux_build.yml  _binaries_mac_build.yml  _binaries_windows_build.yml  binaries.yml  release_assets.yml  vscode_extension.yml
compiler/: CMakeLists.txt  _external_sys.hpp  base.actions.cpp  base.actions.hpp  base.config.hpp  base.dynamic.hpp  base.info.hpp  main.cpp  manifest.ini  package.json
compiler/.cmake/: build-executable.cmake  build-output.cmake  dependencies.cmake  libraries.cmake  utility.cmake
compiler/.cmake/version/: VersionInfo.Rc.in  info.txt.in.template
compiler/base/: actions.cpp  actions.hpp  config.cpp  config.hpp  info.hpp
compiler/common/: debug.hpp  dynamic.hpp  strings.hpp
compiler/comms/: comms.cpp  comms.hpp  dynamic.hpp
compiler/comms/CLI/: README.md  basic.hpp  finalize.hpp  initialize.cpp  initialize.hpp
compiler/comms/LSP/: README.md
compiler/console/: basic.hpp  console.cpp  console.hpp  finalize.cpp  finalize.hpp  initialize.cpp  initialize.hpp  optimization.cpp  optimization.hpp  report.cpp  report.hpp
compiler/parser/: parser.cpp
compiler/parser/.antlr4/: JuggernyautLexer.g4  LexerFragments.g4  LexerSymbols.g4
compiler/store/: FileStore.cpp  FileStore.hpp  files.cpp  files.hpp
configs/: CMakeLists.txt  configs.cpp  configs.hpp  dynamic.hpp  manifest.ini  package.json  tomlpp.hpp
configs/.cmake/: dependencies.cmake  libraries.cmake
core/: CMakeLists.txt  base.actions.cpp  base.config.cpp  base.info.cpp  main.cpp  manifest.ini  package.json
core/.cmake/: ANTLR4-gen.cmake  dependencies.cmake  libraries.cmake
core/.cmake/ANTLR4/: ExternalAntlr4Cpp.cmake
core/.cmake/ANTLR4/patches/: antlr4_runtime_patch__WindowsMacroFix.diff
core/common/: files.cpp  files.hpp  headers.hpp  utility.cpp  utility.hpp
core/comms/: README.md
core/comms/CLI/: report.hpp
core/data/: dynamic.hpp
core/data/store/: Source.cpp  Source.hpp  SourceStore.cpp  SourceStore.hpp  types.hpp
core/diagnostics/: 1.diag  2.diag  Diagnostic.cpp  Diagnostic.hpp  antlr.cpp  antlr.hpp  astGen.cpp  astGen.hpp  dynamic.hpp
core/parser/: Configs.hpp  Hooks.hpp  README.md  antlr4.hpp  dynamic.hpp  parser.cpp  parser.hpp
core/parser/.antlr4/: JuggernyautLexer.g4  JuggernyautParser.g4  LexerFragments.g4  LexerIdentifiers.g4  LexerIgnores.g4  LexerKeywords.g4  LexerLiterals.g4  LexerSymbols.g4
core/parser/internal/: 1.diag  JugLexer.cpp  JugLexer.hpp  JugParser.cpp  JugParser.hpp  cleanup.cpp  cleanup.hpp
core/parser/listeners/: ASTGenListener.cpp  ASTGenListener.hpp  DiagnosticListener.cpp  DiagnosticListener.hpp  WorkflowDiagListener.cpp  WorkflowDiagListener.hpp  errors.cpp  errors.hpp
core/parser/visitors/: 2.diag  ASTGenVisitor.cpp  ASTGenVisitor.hpp
core/session/: dynamic.hpp  session.cpp  session.hpp
core/session/init/: parser.cpp  parser.hpp
core/store/: Source.cpp  Source.hpp  SourceStore.cpp  SourceStore.hpp  dynamic.hpp
extensions/: prism.juggernyaut.js
extensions/VSCode/: CHANGELOG.md  README.md  package-lock.json  package.json
extensions/VSCode/configurations/: juggernyaut-language-configuration.json
extensions/VSCode/scripts/: channel.ts  commands.light.ts  commands.ts  extension.light.ts  extension.ts  native.ts  platform.ts  sdk.ts  server.ts  toolchain.ts
extensions/VSCode/snippets/: juggernyaut.code-snippets.json
extensions/VSCode/syntaxes/: juggernyaut.tmLanguage.json
server/: CMakeLists.txt  lspFramework.hpp  main.cpp  manifest.ini  package.json
server/.cmake/: build-executable.cmake  dependencies.cmake
server/base/: info.cpp  info.hpp
server/capabilities/: basic.cpp  basic.hpp  print.hpp
server/capabilities/semantics/: diagnostics.cpp  diagnostics.hpp
server/capabilities/workspace/: docs.cpp  docs.hpp
server/session/: SessionDebouncer.cpp  SessionDebouncer.hpp
server/store/: Document.cpp  Document.hpp  DocumentStore.cpp  DocumentStore.hpp  files.cpp  files.hpp
tests/: CMakeLists.txt  gtest.hpp  manifest.ini  shared_main.hpp
tests/.cmake/: build-output.cmake  dependencies.cmake  utility.cmake
tests/compiler/: CMakeLists.txt  tests_main.cpp
tests/compiler/flags/: tmp.cpp
tests/configs/: CMakeLists.txt  tests_main.cpp
tests/configs/session/: tmp.cpp
tests/core/: CMakeLists.txt  tests_main.cpp
tests/core/parser/: tmp.cpp
tests/server/: CMakeLists.txt  tests_main.cpp
tests/server/connection/: tmp.cpp
utility/: manifest.ini
utility/common/: CMakeLists.txt  strings.cpp  utility.cpp
utility/common/.cmake/: libraries.cmake
utility/common/include/common/: headers.hpp  strings.hpp  utility.hpp
utility/diag_codes/: .diag  CMakeLists.txt  main.cpp  package.json
utility/diag_codes/.antlr4/: DiagnosticsCodeLexer.g4  DiagnosticsCodeParser.g4
utility/diag_codes/.cmake/: ANTLR4-gen.cmake  build-executable.cmake  dependencies.cmake
